# jfrog-pypi-demo

./: README.md  frogbot-config.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-scan.yml  frogbot.yml
src/: app.py
