[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "demo-catalog-api"
version = "1.0.0"
description = "JFrog PyPI demo — vulnerability catalog API"
requires-python = ">=3.9"
dependencies = [
    "flask==2.2.5",
    "requests==2.27.1",
    "urllib3==1.26.6",
    "Werkzeug==2.2.2",
]
